[BUG] Correction alignement formulaire sur mobile

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -6,11 +6,13 @@ body {
 .container {
   width: 100%;
   margin-inline: auto;
+  padding-inline: 2.4rem;
   @media (min-width: $sm) {
     max-width: 54rem;
   }
   @media (min-width: $md) {
     max-width: 72rem;
+    padding-inline: 1rem;
   }
   @media (min-width: $lg) {
     max-width: 96rem;
